swagger fix Co-authored-by: Dennis Burki <Dennisburki@users.noreply.github.com>
